On pages: corrected font-size for headlines on small devices

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -54,6 +54,15 @@
 		column-count: 1;
 		column-gap: 30px;
 	}
+	
+	.page #hgroup {
+		h1 {
+			font-size: 2em;
+		}
+		h2 {
+			font-size: 1.25em;
+		}
+	}
 }
 
 @media screen and (min-width: 480px) {
@@ -80,6 +89,15 @@
 		-webkit-column-gap: 0px;
 		column-count: 1;
 		column-gap: 40px;
+	}
+	
+	.page #hgroup {
+		h1 {
+			font-size: 2.25em;
+		}
+		h2 {
+			font-size: 1.25em;
+		}
 	}
 }
 
@@ -141,6 +159,15 @@
 		& > li {
 			width: 25%;
 		}	
+	}
+	
+	.page #hgroup {
+		h1 {
+			font-size: 3.75em;
+		}
+		h2 {
+			font-size: 1.75em;
+		}
 	}	
 }
 
